syntax = "proto3";

package demo.healthcheck.v2;
option go_package = "healthcheck/v2";
import "google/api/annotations.proto";

message HealthCheckRequest {
  string service = 1;
}

message HealthCheckResponse {
  enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
    SERVICE_UNKNOWN = 3;  // Used only by the Watch method.
  }
  ServingStatus status = 1;
}

service HealthCheck {
  rpc Check(HealthCheckRequest) returns (HealthCheckResponse) {
    option(google.api.http) = {
			get: "/health-check/v2",
		};
  }

  rpc Watch(HealthCheckRequest) returns (stream HealthCheckResponse);
}
